assets/queries/k8s/pod_misconfigured_network_policy/test/positive_expected_result.json
[
  {
    "queryName": "Pod Misconfigured Network Policy",
    "severity": "MEDIUM",
    "line": 4,
    "fileName": "positive1.yaml",
    "resourceType": "Pod",
    "resourceName": "positive1-pod",
    "searchKey": "metadata.name=positive1-pod",
    "searchValue": "",
    "expectedValue": "Pod positive1-pod should have ingress and egress rules in matching NetworkPolicy",
    "actualValue": "Pod positive1-pod has no ingress or egress rules in matching NetworkPolicy",
    "issueType": "MissingAttribute",
    "similarityID": "82b3cfeeda7e76c54263ff4b349d42879d10ed9519b1141a9231971966a13147",
    "search_line": -1
  },
  {
    "queryName": "Pod Misconfigured Network Policy",
    "severity": "MEDIUM",
    "line": 4,
    "fileName": "positive2.yaml",
    "resourceType": "Pod",
    "resourceName": "positive2-pod",
    "searchKey": "metadata.name=positive2-pod",
    "searchValue": "",
    "expectedValue": "Pod positive2-pod should have ingress and egress rules in matching NetworkPolicy",
    "actualValue": "Pod positive2-pod has no ingress or egress rules in matching NetworkPolicy",
    "issueType": "MissingAttribute",
    "similarityID": "5be66a127bd44adc4a0f3cf6eaf1f6b0c260aba2f545a1e56e94107992174a32",
    "search_line": -1
  }
]
